--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,5 @@
 *djangoenv
+banksystem/api/__pycache__/*
+banksystem/api/migrations/__pycache__/*
+banksystem/banksystem/__pycache__/
+banksystem/db.sqlite3
